version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/Mechanical/ExternalData/CGNSImportSettings.rst.txt
.. vale off



:class:`CGNSImportSettings`
===========================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.Mechanical.ExternalData.CGNSImportSettings

   Bases: :py:obj:`object`


   
   defines how to import external data from a CGNS file.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: CGNSImportSettings

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Format`
            - Gets the existing corresponding format.







Property detail
---------------
.. py:property:: Format
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.ExternalData.ImportFormat]


   
   Gets the existing corresponding format.
















   ..
       !! processed by numpydoc !!







.. vale on