version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/ExternalData/CGNSImportSettings.rst.txt
.. vale off



:class:`CGNSImportSettings`
===========================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.Mechanical.ExternalData.CGNSImportSettings

   Bases: :py:obj:`object`


   
   defines how to import external data from a CGNS file.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: CGNSImportSettings

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Format`
            - Gets the existing corresponding format.







Property detail
---------------
.. py:property:: Format
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.ExternalData.ImportFormat]


   
   Gets the existing corresponding format.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on